[package]
name = "rust-ec2-ssh-autoconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-ec2 = "0.17.0"
aws-types = "0.47.0"
clap = { version = "3.2.17", features = ["derive"] }
serde_yaml = "0.9.9"
structopt = "0.3.26"
tokio = { version = "1.20.1", features = ["full"] }
tracing-subscriber = "0.3.15"
